Fix undefined variable in view modal

--- a/templates/index.html
+++ b/templates/index.html
@@ -417,11 +417,7 @@
                         <div class="col-md-6">
                             <h5>Imagen del Producto</h5>
                             <div id="view_imagen_preview">
-                                {% if pedido.imagen_path %}
-                                <img src="{{ pedido.imagen_path }}" alt="Imagen del Producto" style="max-width: 100%; height: auto; border-radius: 8px;">
-                                {% else %}
-                                No hay imagen asociada.
-                                {% endif %}
+                                <!-- La imagen se insertará aquí mediante JavaScript -->
                             </div>
                         </div>
                     </div>
