Fix form structure in edit modal

--- a/templates/index.html
+++ b/templates/index.html
@@ -371,11 +371,11 @@
                                 <input type="hidden" id="current_imagen_path" name="current_imagen_path" value="{{ edit_form_data.imagen_path if edit_form_data else '' }}">
                             </div>
                         </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                            <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+                        </div>
                     </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="submit" class="btn btn-primary" form="editPedidoForm">Guardar Cambios</button>
                 </div>
             </div>
         </div>
